# ai_development_challenge

./: .env.example  .gitignore  IMPROVEMENTS.md  README.md  SPEC.md  prompts.md  pyproject.toml
dashboard/: main.py  queries.py
dashboard/templates/: index.html
log_generator/: generator.py  main.py
plans/: PLAN_dashboard.md  PLAN_log_generator.md  PLAN_shared.md  PLAN_watchdog.md  PLAN_webhook_receiver.md
shared/: database.py  models.py
watchdog/: analyzer.py  detector.py  main.py  notifier.py  reader.py
webhook_receiver/: database.py  main.py  models.py  routes.py
