[project]
name = "ai-development-challenge"
version = "0.1.0"
description = "Intelligent Observability & Event Watchdog"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pydantic>=2.7.0",
    "anthropic>=0.25.0",
]

[tool.uv]
package = false
